# os_lab1

./: CMakeLists.txt
include/: os.h
src/: child.cpp  linux_os.cpp  parent.cpp
